--- a/software/frontend/views/layouts/mobile.ejs
+++ b/software/frontend/views/layouts/mobile.ejs
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" href="images/favicon.svg" sizes="any" type="image/svg+xml">
     <link rel="stylesheet" href="styles.css" type="text/css">
     <title><%-title%></title>
