finish cam to cam comms

--- a/software/frontend/views/cameras.ejs
+++ b/software/frontend/views/cameras.ejs
@@ -6,4 +6,5 @@
             <input type="text" name="<%=camIds[i] + "_l"%>"> <%="Cam " + camIds[i]%> <input type="text" name="<%=camIds[i] + "_r"%>">
         </div>
     <% } %>
+    <input type="submit" value="Save">
 </form>
